# Goku

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile.in  README-CLANGVERSIONS  README.md  imgui.ini
benchmarks/: CMakeLists.txt  hashset_benchmark.cpp  safe_numeric_benchmark.cpp  sort_benchmark.cpp  sort_multithread_benchmark.cpp
data/: canvas.json  config.json  player.json  player_goku.json
data/config/: config.json
data/scenes/: scenetest.json
game/: CMakeLists.txt  game.cpp  game.h  main.cpp
soul/: CMakeLists.txt  core.h  datetime.h  entity.cpp  entity.h  hashset.h  logger.cpp  pathmanager.h  rect.h  scene.h  singleton.h  time_elapsed.h  utils.h  vector_t.h
soul/core/: core.h  datetime.cpp  logger.cpp  logger.h  rect.h  singleton.h  vector2.h
soul/ecs/: entity.cpp  entity.h
soulsfml/: CMakeLists.txt  animable.cpp  animable.h  assetmanager.cpp  assetmanager.h  canvas.cpp  canvas.h  color.h  entitymanager.cpp  entitymanager.h  fireball.cpp  fireball.h  gamewindow.cpp  gamewindow.h  gui.cpp  gui.h  image.h  loaders.h  player.cpp  player.h  scene.cpp  scene.h  shader.cpp  shader.h  sprite2d.cpp  sprite2d.h  spriteanimation.cpp  spriteanimation.h  state.cpp  state.h  texture2d.cpp  texture2d.h  tile.cpp  tile.h
test_animable/: CMakeLists.txt  main.cpp
test_entity_states/: CMakeLists.txt  main.cpp
test_jthread/: CMakeLists.txt  barrier.cpp  latch.cpp  main.cpp  main.h
test_sprite/: CMakeLists.txt  main.cpp
test_spriteanim/: CMakeLists.txt  main.cpp
test_state_animable/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  collision_test.cpp  datetime_test.cpp  entity_test.cpp  fireball_test.cpp  hashset_test.cpp  logger_test.cpp  safe_numeric_test.cpp  singleton_test.cpp  sprite_test.cpp  texture_test.cpp  time_elapsed_test.cpp
